--- a/shaders/package.json
+++ b/shaders/package.json
@@ -11,7 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "canvas-sketch": "^0.7.4",
+    "glsl-aastep": "^1.0.1",
     "glsl-noise": "^0.0.0",
+    "lodash": "^4.17.21",
+    "riso-colors": "^1.0.1",
     "three": "^0.135.0"
   }
 }
